--- a/download.html
+++ b/download.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
         </div>
-        <h1 class="heading-sdfsd2y">Скачать приложение</h1><img src="634e582d9ea704dcb7f224bf/635147a216d52763352f2b49_src.svg" loading="lazy" alt="">
+        <h1 class="heading-sdfsd2y">Скачать приложение</h1><img src="/img/vpn.png" loading="lazy" alt="">
         <div class="dfgfdgdf w-row">
             <div class="column w-col w-col-6">
                 <div class="card_about2"><img src="634e582d9ea704dcb7f224bf/63516b1f57af51b41b9698fe_bxl-windows.svg.svg" loading="lazy" alt="" class="image-10">
