--- a/index.htm
+++ b/index.htm
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </div>
-        <div class="h222"><img src="634e582d9ea704dcb7f224bf/635147a216d52763352f2b49_src.svg" loading="lazy" alt=""></div>
+        <div class="h222"><img src="/img/vpn.png" loading="lazy" alt=""></div>
         <div class="h222">
             <h1 class="heading-sdfsd">Преимущества</h1>
             <div class="columns w-row">
